Fix message pane to allow clickable elements behind it's layer

--- a/sass/_alerts.scss
+++ b/sass/_alerts.scss
@@ -69,14 +69,11 @@
 #messagepane {
 	position: fixed;
 	bottom: 0;
-	right: 0;
-	left: 0;
+	z-index: 20000;
 	text-align: center;
 }
 
 span#message {
-	position: relative;
-	z-index: 20000;
 	@include inline-block;
 	@include border-radius($border-radius $border-radius 0 0);
 	margin: 0 auto;
